--- a/db/renderer.lpc.html
+++ b/db/renderer.lpc.html
@@ -112,7 +112,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >PS2|PS2_Command_Out</TD>
+<TD >KB_I|PS2|PS2_Command_Out</TD>
 <TD >13</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >PS2|PS2_Data_In</TD>
+<TD >KB_I|PS2|PS2_Data_In</TD>
 <TD >7</TD>
 <TD >0</TD>
 <TD >1</TD>
@@ -144,12 +144,28 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >PS2</TD>
+<TD >KB_I|PS2</TD>
 <TD >11</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >KB_I</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >10</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
